catalog-scss/index.scss
@use 'colors';
@use 'btns';
@use 'header';
@use 'home';
@use 'mastheadsearch';
@use 'memberentry';
@use 'moresearches';
@use 'toolbar';
@use 'search-results';
@use 'bib-details';
@use 'ill';
@use 'lists';
@use 'holds';
@use 'renewal';
@use 'suggestions';
@use 'font';
@use 'required';

.breadcrumb {
  display: none;
}

.main {
  border: 0;
}

// class needed for specificity
.no-js body,
.fonts-loaded body {
  background: colors.$white;
  font: 16px Raleway, sans-serif;
}

